traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:21: error: ';' expected but 'if' found.
    }if(estFaceMur()){
     ^Snake:40: error: '=' expected but '.' found.
def change.OUEST(){
          ^Snake:46: error: illegal start of simple expression
}
^